Make padding smaller on links in menu to avoid too much scrolling
On most devices, you now don't need to scroll in the menu.
Only for "kvalitetshåndbok" which have many menu items.

--- a/src/layout/layout.module.css
+++ b/src/layout/layout.module.css
@@ -111,12 +111,12 @@
 }
 
 .nav__inner__link {
-  padding-bottom: 1.5rem;
+  padding-bottom: 1rem;
   color: var(--color-secondary3__shade1);
 }
 
 .nav__inner__link__active {
-  padding-bottom: 1.5rem;
+  padding-bottom: 1rem;
   color: var(--color-primary__tint1);
 }
 .nav__inner__link__active a {
